<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardviews_paddingmargin"
    android:background="@color/colorScreen"
    android:orientation="vertical"
    android:padding="@dimen/cardviews_paddingmargin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        app:srcCompat="@drawable/kariyer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/text_padding"
            android:text="@string/subtitle_awards"
            android:textColor="@color/textColor"
            android:textSize="@dimen/subtitle_text_size"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:text="@string/cr7_career"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/download_vector"
        android:layout_height="@dimen/download_vector"
        app:srcCompat="@drawable/ic_file_download_black_24dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_button"
        android:gravity="center"
        android:text="@string/read_more"
        android:textColor="@color/cardview_light_background" />

</LinearLayout>