<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:background="@color/colorScreen"
    android:orientation="vertical"
    android:padding="@dimen/cardviews_paddingmargin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        app:srcCompat="@drawable/pl" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/text_padding"
            android:text="@string/subtitle_PL"
            android:textColor="@color/textColor"
            android:textSize="@dimen/subtitle_text_size"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:text="@string/cr7_PL"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/download_vector"
        android:layout_height="@dimen/download_vector"
        app:srcCompat="@drawable/ic_file_download_black_24dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_button"
        android:gravity="center"
        android:text="@string/read_more"
        android:textColor="@color/cardview_light_background" />

</LinearLayout>